
Libraries 8.x-3.x, xxxx-xx-xx
-----------------------------
#2742333 by jrockowitz: Fix missing @group in LinePatternDetectorTest
by tstoeckler: Document plugin alter hooks
by tstoeckler: Fix coding standards
by tstoeckler: Split out library dependencies to a separate interface
by tstoeckler: Implement version detection for libraries
by tstoeckler: Add deprecation notices to all legacy functions and hooks
#2090623 by tstoeckler: Introduce the notion of library types
#2090623 by tstoeckler: Provide support for remote asset libraries
#2090623 by tstoeckler: Introduce a stream wrapper for asset libraries
#2090623 by tstoeckler: Introduce the concept of locators
#2606420 by googletorp, tstoeckler: Fix profile library detection
#2090623 by tstoeckler: Add an external library registry
#2572401 by rjacobs, yas: Fix missing @group annotation in PhpFileLibraryTest
#2090623 by tstoeckler: Add a test for PHP file loading
#2090623 by tstoeckler: Provide a modern, flexible library API
#2525898 by rjacobs, jonhattan: Fix obsoleted cache bin declaration.
#2471501 by LKS90: Replace all occurrences of String with the SafeMarkup equivalent.
by tstoeckler: Fix drush libraries-list and drush cache-clear libraries.
#2427801 by Anushka-mp, tstoeckler: Replace module_invoke() call.
by tstoeckler: Fix tests.
#2390301 by rjacobs: Fix DrupalUnitTestBase no longer exists so tests can't load.
#2332157 by tstoeckler: Add a composer.json.
#2287529 by drupalshrek, tstoeckler: Update installation link in README.txt.
by tstoeckler: Fix tests.
#2309203 by JayeshSolanki: Replace removed functions with module handler service.
#2290767 by yukare: Replace removed cache() function.
#2183087 by tstoeckler, rjacobs: Update for removed core functions.
by tstoeckler: Fix tests.
by tstoeckler: Provide required 'type' key in test library info file.
#2090351 by tstoeckler: Remove obsolete hook_flush_caches().
#2090425 by tstoeckler: Adapt for renamed ControllerInterface.